deployment/demo-app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-app
  namespace: default
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
      - demo-apps-DASHBOARD_URL
      secretName: a9s-ingress-secret
  rules:
  - host: demo-apps-DASHBOARD_URL
    http:
      paths:
      - path: /
        backend:
          serviceName: demo-app
          servicePort: 3000
